--- a/gb/25/8/25/n14580517.md
+++ b/gb/25/8/25/n14580517.md
@@ -12,38 +12,33 @@
 <figure id="14580520" aria-describedby="caption-14580520" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2025/08/id14580520-790347-450x268.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2025/08/id14580520-790347-450x268.jpg" alt="桃医疗器材公会抛砖引玉，助社宅无障碍与友善居住环境。" width="500" /></a><figcaption id="caption-14580520" class="wp-caption-text">桃医疗器材公会抛砖引玉，助社宅无障碍与友善居住环境。（桃园市都市发展局提供）</figcaption></figure>
 <p>责任编辑：杜文卿</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/26/n13720771.md#1">“大树下的心愿”无障碍休闲平台完工</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/18/n13847685.md#1">立法委员黄世杰  捐赠桃园市ㄇ型助行器</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/12/n14200591.md#1">桃园大大捐血嘉年华 戴永辉号召集团齐捐血</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273212.md#1">桃园市总统教育奖得主 杰出表现为生命增添光彩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307122.md#1">金马影后陈淑芳等共同捐赠桃园辅具及防诈宣导</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/26/n14517875.md#1">用光照亮逆境人生 桃园新明国小李奕霈总统教育奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/3/n14523324.md#1">提升病患就医便利性 35台轮椅捐部桃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615852.md#1">人本道安．透明廉安高峰论坛   工程伦理与廉政治理兼顾</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615832.md#1">打造城市创意平台  “中原文创613市集”软硬体再升级</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615827.md#1">退休风华再现   桃园山顶国小鼓花队重返舞台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/15/n11942777.md#1" target="_blank">掸封尘：江青“醋坛子”的能量究竟有多大</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/11/13/n2327659.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/21/n10992365.md#1" target="_blank">殷毅：我在右派专列上</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/5/5/n2105459.md#1" target="_blank">纪实报告：法轮大法真相</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/2/n14607111.md#1">【未解之谜】印度电影爆红 意外揭开中共不敢说的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/26/n14603313.md#1">中秋奇谭：伍子胥的钱塘潮和天外来的警告</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/30/n14605659.md#1">不老的中秋节 那些代代不老的中秋故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/1/n14606371.md#1">看不见的优雅：文明和善良是快乐的源泉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610664.md#1">诗词九首 中秋敬颂师恩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/7/n14611529.md#1">【热点互动】北京切断英使馆供水 震惊舆论</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/7/n14611511.md#1">【纪元焦点】四中全会前 张又侠五句话震撼胡温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/7/n14611524.md#1">【直播】听证会：应对中共在印太地区挑衅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/1/n14606983.md#1">2025年五款SUV降价 含丰田电动车和本田CR-V</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610447.md#1">大量游客滞留雁门关景区 高喊退票</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610282.md#1">研究：新鲜蔬菜会吸收奈米塑胶 让你吃进去</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/5/n14609418.md#1">孙俪携女儿游巴黎 母女同款造型好有爱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610868.md#1">于朦胧事件持续发酵 知名主持人曾曝签约黑幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/5/n14610116.md#1">卡麦隆透露《阿凡达3》故事结局及续集走向</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/7/n14611630.md#1">陆男星邓伦遭封杀3年后现身 素颜状态引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/6/n14610492.md#1">《一字千金》开播遇《中文怪物》 公视乐见其成</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/5/n14609531.md#1">6种室内植物可以消除湿气和减少霉菌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/7/n14611190.md#1">为何你应该在秋天把橘子皮放在汽车里？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/3/n14608772.md#1">【半日闲】曾经沧海变桑田——科罗拉多大峡谷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/3/n14608790.md#1">【半日闲】疑是银河落九天：优胜美地国家公园</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/8/25/n14580517.htm">桃园医疗器材商业同业公会捐赠社宅爱心轮椅</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580517.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
